Change peer to ident. Why?

--- a/vagrant/cookbooks/postgresql/templates/default/pg_hba.conf.erb
+++ b/vagrant/cookbooks/postgresql/templates/default/pg_hba.conf.erb
@@ -31,5 +31,5 @@
 <% if node['postgresql']['version'].to_f < 9.1 -%>
 local   all             all                                     ident
 <% elsif node['postgresql']['version'].to_f >= 9.1 -%>
-local   all             all                                     peer
+local   all             all                                     ident
 <% end -%>
